# xir

./: Cargo.toml  README.md  cspell.json
.github/workflows/: release.yaml  test.yaml
metir/: Cargo.toml
metir/src/analysis/: lifetime_check.rs  mod.rs
metir/src/ir/: block.rs  branch.rs  expression.rs  function_declaration.rs  function_definition.rs  instruction.rs  mod.rs  module.rs  return_.rs  terminal_instruction.rs  variable_declaration.rs  variable_definition.rs
metir/src/types/: function.rs  function_type.rs  mod.rs
tools/: version.sh
tools/ci/: release.sh
xir/: Cargo.toml
xir-cranelift/: Cargo.toml
xir-cranelift/src/: lib.rs  operation.rs  type.rs
xir-scf/: Cargo.toml
xir-scf/src/: lib.rs
xir/src/: argument.rs  attribute.rs  block.rs  block_argument.rs  context.rs  lib.rs  operation.rs  span.rs  symbol.rs  type.rs  value.rs
xir/src/ir/: argument.rs  block.rs  expression.rs  function_definition.rs  instruction.rs  mod.rs  module.rs  return_.rs  variable_definition.rs
xir/src/types/: type_.rs
