[workspace]
resolver = "3"
members = ["xir", "xir-cranelift", "xir-scf"]

[workspace.package]
version = "0.1.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/raviqqe/xir"
license-file = "LICENSE"
keywords = ["language"]

[workspace.lints.clippy]
alloc_instead_of_core = "deny"
dbg_macro = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
explicit_deref_methods = "deny"
if_not_else = "deny"
manual_let_else = "deny"
# TODO Enable this.
# missing_const_for_fn = "deny"
option_if_let_else = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
todo = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unused_self = "deny"
use_self = "deny"

[workspace.lints.rust]
missing_docs = "deny"
warnings = "deny"
