[package]
name = "xir-cranelift"
description = "Cranelift intermediate represesntation for XIR"
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
xir = { version = "0.1.0", path = "../xir" }

[lints]
workspace = true
