[package]
name = "xir-cranelift"
version = "0.1.2"
edition.workspace = true
description = "Cranelift intermediate represesntation for XIR"
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
xir = { path = "../xir", version = "0.1.1" }

[lints]
workspace = true
