[package]
name = "xir-cranelift"
version.workspace = true
edition.workspace = true
description = "Cranelift intermediate representation for XIR"
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
xir = { path = "../xir", version = "0.1.1" }

[lints]
workspace = true
