[package]
name = "xir"
description = "Blah-blah intermediate representation"
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
bumpalo = { version = "3.16.0", features = ["allocator_api"] }

[lints]
workspace = true
