[package]
name = "xir"
version.workspace = true
edition.workspace = true
description = "Blah-blah intermediate representation"
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
bumpalo = { version = "3.19.1", features = ["allocator_api"] }
dashmap = "6.1.0"

[lints]
workspace = true
