[package]
name = "xir"
version.workspace = true
edition.workspace = true
description = "Blah-blah intermediate representation"
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
bumpalo = { version = "3.20.2", features = ["allocator_api"] }
dashmap = "6.2.1"

[lints]
workspace = true
